# clustering-suite

./: .anjuta_sym_db.db  .gitignore  AUTHORS  ChangeLog  ClusteringSuite.cbp  ClusteringSuite.layout  ClusteringSuite.project  Makefile.am  PATHS  README  aclocal.m4  autogen-mn.sh  autogen.sh  bootstrap  config.h.in  configure.ac  configure.ac.template  substitute-all
doc/: Makefile.am  cluster_analysis_thesis_bibliography.bib  clustering_manual_structure.txt  clusteringsuite_design.tex  clusteringsuite_manual.tex  extra_commands.tex
pcfparser_svn1816/: Makefile.am  ParaverTraceConfig.cpp  ParaverTraceConfig.h  ParaverTraceConfigGrammar.h  README_PYTHON  UIParaverTraceConfig.cpp  UIParaverTraceConfig.h  UIParaverTraceConfig.ipp  UIParaverTraceConfig_python.h  debug.h
pcfparser_svn3942/: Makefile.am  ParaverTraceConfig.cpp  ParaverTraceConfig.h  README_PYTHON  UIParaverTraceConfig.cpp  UIParaverTraceConfig.h
scripts/: Makefile.am  clustering-config.in
src/: Makefile.am
src/BasicClasses/: Error.cpp  Error.hpp  FileNameManipulator.cpp  FileNameManipulator.hpp  Makefile.am  SystemMessages.cpp  SystemMessages.h  SystemMessages.hpp  Timer.cpp  Timer.hpp  Utilities.cpp  Utilities.hpp
src/BurstClustering/: BurstClustering.cpp  BurstClustering.sh  Makefile.am
src/ClusteringDataExtractor/: ClusteringDataExtractor  ClusteringDataExtractorMain.cpp  Makefile.am
src/ClustersDiff/: ClustersDiff  ClustersDiff.cpp  Makefile.am  MirkinDistance.cpp  MirkinDistance.hpp
src/ClustersSequenceScore/: ClustersSequenceScore.cpp  ClustersSequenceScore.sh  Makefile.am
src/DBSCANParametersApproximation/: DBSCANParametersApproximation  DBSCANParametersApproximationMain.cpp  Makefile.am
src/DataExtraction/: CPUBurst.cpp  CPUBurst.hpp  ClusteringDataExtraction.cpp  ClusteringDataExtraction.hpp  DataExtractor.hpp  DataExtractorFactory.cpp  Makefile.am  Makefile.am.bak  PRVDataExtractor.cpp  TRFDataExtractor.cpp  TRFDataExtractor.hpp  TraceData.cpp  TraceData.hpp
src/MRNetStub/: MRNetStub.cpp  Makefile.am
src/MusterDistributedClustering/: Makefile.am  MusterDistributedClustering.cpp
src/SharedComponents/: ClusteringConfiguration.cpp  ClusteringConfiguration.hpp  FileNameManipulator.cpp  Makefile.am  Makefile.am.bak  ParametersManager.cpp  ParametersManager.hpp  PlottingManager.cpp  PlottingManager.hpp  State.cpp  State.hpp  XMLParser.cpp  XMLParser.hpp
src/TreeDBSCAN/: ClusteringBackEnd.cpp  ClusteringBackEnd.h  ClusteringBackEndOffline.cpp  ClusteringBackEndOffline.h  ClusteringBackEndOnline.cpp  ClusteringBackEndOnline.h  ClusteringCore.cpp  ClusteringCore.h  ClusteringFilter.cpp  ClusteringFilter.h  ClusteringFrontEnd.cpp  ClusteringFrontEnd.h  ClusteringOffline_BE.cpp  ClusteringOffline_BE.h  ClusteringOffline_FE.cpp  ClusteringOffline_FE.h  ClusteringTags.h  Clustering_Filter.cpp  Clustering_Filter.h  ClustersInfo.cpp  ClustersInfo.h  HullManager.cpp  HullManager.h  Makefile.am  NoiseManager.cpp  NoiseManager.h  Statistics.cpp  Statistics.h  Support.cpp  Support.h  SupportFilter.cpp  TDBSCANCore.cpp  TDBSCANCore.h  TDBSCANFilter.cpp  TDBSCANFilter.h  TDBSCANRoot.cpp  TDBSCANRoot.h  TDBSCANTags.h  TDBSCANWorker.cpp  TDBSCANWorker.h  (+13 more)
src/libANN/: Makefile.am
src/libClustering/: Classifier.hpp  ClusteringAlgorithm.hpp  ClusteringAlgorithmsFactory.cpp  ClusteringAlgorithmsFactory.hpp  ConvexHullClassifier.cpp  ConvexHullClassifier.hpp  ConvexHullModel.cpp  ConvexHullModel.hpp  DBSCAN.cpp  DBSCAN.hpp  GMEANS.cpp  GMEANS.hpp  MUSTER_CAPEK.cpp  MUSTER_CAPEK.hpp  MUSTER_DBSCAN.cpp  MUSTER_DBSCAN.hpp  MUSTER_PAM.cpp  MUSTER_PAM.hpp  MUSTER_XCLARA.cpp  MUSTER_XCLARA.hpp  Makefile.am  Makefile.am.bak  NearestNeighbourClassifier.cpp  NearestNeighbourClassifier.hpp  OPTICS.cpp  OPTICS.hpp  Partition.cpp  Partition.hpp  Point.cpp  Point.hpp  clustering_types.h  libClustering.cpp  libClustering.hpp  libClusteringImplementation.cpp  libClusteringImplementation.hpp
src/libDistributedClustering/: ClusterStatistics.cpp  ClusterStatistics.hpp  HullModel.cpp  HullModel.hpp  Makefile.am  libDistributedClustering.cpp  libDistributedClustering.hpp  libDistributedClusteringImplementation.cpp  libDistributedClusteringImplementation.hpp
src/libParaverTraceParser/: Makefile.am  Makefile.am.bak  ParaverApplicationDescription.cpp  ParaverApplicationDescription.hpp  ParaverCommunicator.cpp  ParaverCommunicator.hpp  ParaverHeader.cpp  ParaverHeader.hpp  ParaverMetadataManager.cpp  ParaverMetadataManager.hpp  ParaverRecord.cpp  ParaverRecord.hpp  ParaverTraceParser.cpp  ParaverTraceParser.hpp
src/libSharedComponents/: BurstsDB.cpp  BurstsDB.hpp  CPIStackModel.hpp  CPUBurst.cpp  CPUBurst.hpp  CSVDataExtractor.cpp  CSVDataExtractor.hpp  ClusterInformation.cpp  ClusterInformation.hpp  ClusteredEventsPRVGenerator.cpp  ClusteredEventsPRVGenerator.hpp  ClusteredPRVGenerator.cpp  ClusteredStatesPRVGenerator.cpp  ClusteredStatesPRVGenerator.hpp  ClusteredTRFGenerator.cpp  ClusteredTRFGenerator.hpp  ClusteredTraceGenerator.cpp  ClusteredTraceGenerator.hpp  ClusteringConfiguration.cpp  ClusteringConfiguration.hpp  ClusteringParameter.cpp  ClusteringParameter.hpp  ClusteringRefinement.cpp  ClusteringRefinement.hpp  ClusteringRefinementAggregative.cpp  ClusteringRefinementAggregative.hpp  ClusteringRefinementDivisive.cpp  ClusteringRefinementDivisive.hpp  ClusteringStatistics.cpp  ClusteringStatistics.hpp  DataExtractor.cpp  DataExtractor.hpp  DataExtractorFactory.cpp  DataExtractorFactory.hpp  Makefile.am  PRVDataExtractor.cpp  PRVDataExtractor.hpp  PRVEventsDataExtractor.cpp  PRVEventsDataExtractor.hpp  PRVSemanticGuidedDataExtractor.cpp  (+21 more)
src/libTraceClustering/: CPUBurst.cpp  ClusteredPRVGenerator.hpp  ClusteredTRFGenerator.cpp  ClusteredTraceGenerator.hpp  DataExtractor.cpp  DataExtractor.hpp  DataExtractorFactory.cpp  DataExtractorFactory.hpp  Makefile.am  PRVDataExtractor.cpp  TRFDataExtractor.cpp  TraceData.cpp  TraceData.hpp  libTraceClustering.cpp  libTraceClustering.hpp  libTraceClustering.preprocessed  libTraceClusteringImplementation.cpp  libTraceClusteringImplementation.hpp  trace_clustering_types.h
(+101 files in other folders)
